craete Dialog component for rendering the form & it's components

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Press+Start+2P&family=Raleway:wght@800&display=swap');
 
 html,
-body {
+body,
+:root {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
